# Mini-Shell

./: .gitignore  CMakeLists.txt  README.md  main.out  pipelineAddition.md
docs/features/: pipelineAddition.md
include/: builtCd.hpp  commandDispatcher.hpp  config.hpp  dispatcher.hpp  getInternMap.hpp  printCwd.hpp  shell.hpp
include/built-ins/: builtExit.hpp  builtHistory.hpp
include/core/: dispatcher.hpp  shell.hpp  shellContext.hpp
include/execution/: pipelineCommands.hpp
include/utils/: getInternMap.hpp  hasRedirection.hpp  history.hpp  historyGlobal.hpp  printCwd.hpp
notes/pipe/: pipe.md
notes/redirection/: redirection.md
src/: builtCd.cpp  builtExit.cpp  builtHistory.cpp  commandDispatcher.cpp  dispatcher.cpp  externalCommands.cpp  getInternMap.cpp  historyGlobal.cpp  main.cpp  printCwd.cpp  shell.cpp  shell.out  tokenize.cpp
src/built-ins/: builtCd.cpp  builtHistory.cpp
src/core/: dispatcher.cpp  shell.cpp  tokenize.cpp
src/execution/: externalCommands.cpp  pipeCommands.cpp  pipelineCommands.cpp
src/utils/: getInternMap.cpp  hasRedirection.cpp  history.cpp  historyGlobal.cpp  printCwd.cpp
